@@ -42,7 +42,7 @@ class Images_examples extends CI_Controller {
 	function example2()
 	{
 		$image_crud = new image_CRUD();
-	
+		
 		$image_crud->set_primary_key_field('id');
 		$image_crud->set_url_field('url');
 		$image_crud->set_table('example_2')
@@ -84,5 +84,22 @@ class Images_examples extends CI_Controller {
 		$output = $image_crud->render();
 	
 		$this->_example_output($output);
+	}
+	
+	function simple_photo_gallery()
+	{
+		$image_crud = new image_CRUD();
+		
+		$image_crud->unset_upload();
+		$image_crud->unset_delete();
+		
+		$image_crud->set_primary_key_field('id');
+		$image_crud->set_url_field('url');
+		$image_crud->set_table('example_4')
+		->set_image_path('assets/uploads');
+		
+		$output = $image_crud->render();
+		
+		$this->_example_output($output);		
 	}
 }
